[gd_scene load_steps=8 format=3 uid="uid://ceao37vrqplqj"]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Popup_Forms/PopupEventSelection..gd" id="1"]
[ext_resource type="Theme" uid="uid://cvs3ru70gnho3" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_15.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://civbxt4nfyill" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_DropdownList.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/NavigationButtonTemplate.tscn" id="6_ij2mt"]
[ext_resource type="PackedScene" uid="uid://4x3l1nwo5cbu" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/accept_cancel_buttons.tscn" id="7_eds7g"]

[node name="popup_Event_Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBox1" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -80.0
offset_right = 265.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input_Label_Template" parent="VBox1" instance=ExtResource("4")]
layout_mode = 2
size_flags_stretch_ratio = 0.25

[node name="HBox1" parent="VBox1/Input_Label_Template" index="0"]
custom_minimum_size = Vector2(0, 30)

[node name="input_templateBuffer" parent="VBox1" instance=ExtResource("5")]
layout_mode = 2

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
layout_mode = 2

[node name="Existing_Events_Dropdown" parent="VBox1/HBox1" instance=ExtResource("3")]
layout_mode = 2
label_text = "Existing Events"
is_label_button = false

[node name="input_templateBuffer" parent="VBox1/HBox1/Existing_Events_Dropdown" index="2"]
visible = false

[node name="Label" type="Label" parent="VBox1/HBox1"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01

[node name="Create_New_Event_Button" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("6_ij2mt")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Create_New_Event_Button1" type="Button" parent="VBox1/HBox1"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Create New Event"

[node name="input_templateBuffer2" parent="VBox1" instance=ExtResource("5")]
layout_mode = 2

[node name="AcceptCancelButtons" parent="VBox1" instance=ExtResource("7_eds7g")]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Accept" parent="VBox1/HBox2" groups=["Table Action"] instance=ExtResource("6_ij2mt")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="VBox1/HBox2" groups=["Table Action"] instance=ExtResource("6_ij2mt")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[connection signal="btn_pressed" from="VBox1/AcceptCancelButtons/Accept" to="." method="_on_accept_btn_pressed"]
[connection signal="btn_pressed" from="VBox1/AcceptCancelButtons/Cancel" to="." method="_on_cancel_btn_pressed"]

[editable path="VBox1/Input_Label_Template"]
[editable path="VBox1/HBox1/Existing_Events_Dropdown"]
[editable path="VBox1/HBox1/Existing_Events_Dropdown/Label"]
[editable path="VBox1/AcceptCancelButtons"]
